# advent-of-code-2023

./: Cargo.toml  README.md
day_1/: Cargo.toml  justfile  problem.md
day_10/: Cargo.toml  problem.md
day_19/: Cargo.toml  problem.md
day_2/: Cargo.toml  problem.md
day_3/: Cargo.toml  problem.md
day_4/: Cargo.toml  problem.md
day_5/: Cargo.toml  problem.md
day_6/: Cargo.toml  problem.md
day_7/: Cargo.toml  problem.md
day_8/: Cargo.toml  problem.md
day_9/: Cargo.toml  problem.md
template/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs  math.rs  parsing.rs
