[workspace]
members = ["*/"]
exclude = ["target", ".git"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
regex = "1"
fancy-regex = "0.12"
pretty_assertions = "1.4"
nom = "7"
colored = "2"
priority-queue = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99"
rayon = "1.8"
itertools = "0.12"
